%% Class diagram — Campus (facilities / branches)
%% CampusController + CampusService; links students and bus routes

classDiagram
  direction TB

  namespace Domain {
    class Campus {
      +Id Code Name Address Phone
      +IsActive ImageUrl
    }
    class Student {
      +Id CampusId
    }
    class BusRoute {
      +Id CampusId Name IsEnabled
    }
  }

  Campus "1" --> "*" Student : hosts
  Campus "1" --> "*" BusRoute : owns
